# docs/swagger.json
@@ -1,16 +1,17 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "parser-service",
+        "description": "Swag documentaion for parser service API",
+        "title": "Parser service",
         "contact": {},
-        "version": "1.0"
+        "version": "2.0.0"
     },
     "host": "localhost:4000",
     "basePath": "/",
     "paths": {
-        "/parse/{querry}": {
-            "get": {
-                "description": "Parser",
+        "/parser/cyberleninka": {
+            "post": {
+                "description": "parse one page to get informaion about nr",
                 "consumes": [
                     "application/json"
                 ],
@@ -20,21 +21,161 @@
                 "tags": [
                     "Parser"
                 ],
-                "summary": "Parse",
+                "summary": "Parse one page by current query",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Category",
-                        "name": "category",
-                        "in": "path",
-                        "required": true
+                        "description": "create new user",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.Body"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.Article"
+                            "$ref": "#/definitions/responses.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/parser/cyberleninka/all": {
+            "post": {
+                "description": "parse all site to get informaion about nr",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Parser"
+                ],
+                "summary": "Parse all pages by current query",
+                "parameters": [
+                    {
+                        "description": "create new user",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.Body"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/parser/lvrach": {
+            "post": {
+                "description": "pars site to get informaion about nr",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Parser"
+                ],
+                "summary": "Parse page by current query",
+                "parameters": [
+                    {
+                        "description": "create new user",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.Body"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/parser/lvrach/all": {
+            "post": {
+                "description": "pars site to get informaion about nr",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Parser"
+                ],
+                "summary": "Parse all pages by current query",
+                "parameters": [
+                    {
+                        "description": "create new user",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.Body"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Response"
                         }
                     },
                     "400": {
@@ -54,38 +195,28 @@
         }
     },
     "definitions": {
+        "requests.Body": {
+            "type": "object",
+            "properties": {
+                "query": {
+                    "type": "string"
+                }
+            }
+        },
         "responses.Article": {
             "type": "object",
             "properties": {
                 "annotation": {
                     "type": "string"
                 },
-                "authors": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "journal": {
-                    "type": "string"
-                },
-                "journal_link": {
-                    "type": "string"
+                "id": {
+                    "type": "integer"
                 },
                 "link": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
-                },
-                "ocr": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "year": {
-                    "type": "integer"
                 }
             }
         },
@@ -94,6 +225,20 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "responses.Response": {
+            "type": "object",
+            "properties": {
+                "articles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.Article"
+                    }
+                },
+                "found": {
+                    "type": "integer"
                 }
             }
         }
